# shazam

./: .gitignore  main.py  pyproject.toml  requirements.txt
backend/: db.py  index.html  main.py  microphone.py  recognizer.py  web.py
frontend/: app.py  history.py  player.py  playlists.py  search.py  shazam.py  style.qss  workers.py
frontend/components/: player.py  result_row.py  visualizer.py
scripts/: add_songs.py  gimme_spectrogram.py  serve_web.py
tests/: test_db.py  test_disrupted_gimme.py  test_fingerprinting.py  test_recognizer.py  test_web.py
