[project]
name = "spotirec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "py-yt-search>=0.7.2",
    "pyqt6>=6.10.0",
    "sounddevice>=0.5.3",
    "scipy>=1.17.1",
    "yt-dlp>=2026.6.9",
    "fastapi[standard]>=0.137.1",
    "pyqtdarktheme>=2.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.fastapi]
entrypoint = "backend.web:app"
